# mcp-travel-assistant

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FASTMCP_SETUP.md  PR_DESCRIPTION.md  README.md  RELEASE_2.3.0.md  analyze_server.py  docker-compose.yml  pyproject.toml  quick_test.py  server.py  test_results.py
.fastmcp/: config.yaml
.github/workflows/: deploy.yml
.mcp/: config.json
docs/: ACCESSIBILITY_IMPLEMENTATION.md
src/travel_assistant/: __init__.py  __main__.py  clients.py  helpers.py  models.py  server.py
tests/: __init__.py  conftest.py  test_accessibility.py  test_clients.py  test_helpers.py  test_models.py  test_server.py
