[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-assistant"
version = "2.2.0"
description = "Unified MCP server providing comprehensive travel planning services"
authors = [
    {name = "Travel Concierge Team", email = "support@travelconcierge.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "geopy>=2.3.0",
    "fastmcp>=2.0.0,<3.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "amadeus>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/unified-travel-concierge"
Repository = "https://github.com/yourusername/unified-travel-concierge.git"
Issues = "https://github.com/yourusername/unified-travel-concierge/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
travel-assistant = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "travel-assistant",
]
